# magnolia

./: .env.example  .gitattributes  .gitignore  DEVELOPER.md  HANDOFF.md  README.md  README_SECURITY.md  build.bat  commit.md  failed_log_full.txt  fix.patch  fix.py  fix2.patch  fix_conflict.py  fix_lint.patch  fix_merge.diff  fix_plan.md  fix_plan2.md  fix_plan3.md  fix_script.js  fix_storage_again.py  package-lock.json  package.json  patch.diff  patch2.diff  patch3.diff  patch_api.py  patch_conflict.diff  patch_conflict.sh  patch_resolve.diff  plan.md  pr.md  pr_body.txt  pr_desc.txt  pr_description.md  pr_description.txt  qemu-test-win.bat  test-plan.txt  test-review.md  test.py  (+5 more)
.github/workflows/: build-iso.yml  ci.yml  deploy-website.yml  magnolia_verify.yml  release.yml
docs/: AGENT_HANDBOOK.md  ARCHITECTURE.md  BUILD.md  FEATURES.md  LINUX_DEV_SETUP.md  PLANNING.md
intelligence/: AGENTS.md  SOUL.md  TOOLS.md
magnolia-core/: Cargo.toml  tauri.conf.json
magnolia-core/icons/: icon.icns
magnolia-core/src/: app_manager.rs  benches.rs  benchmark.rs  bin_bench.rs  database.rs  downloader.rs  huggingface.rs  indexer.rs  inference.rs  init.rs  installer.rs  lib.rs  llm_manager.rs  main.rs  rag.rs  secrets.rs  telemetry.rs
magnolia-core/src/handlers/: app.rs  browser.rs  files.rs  knowledge.rs  llm.rs  mod.rs  models.rs  secrets.rs
magnolia-core/src/system/: ai.rs  api.rs  api.rs.orig  audit.rs  cloud.rs  error.rs  hal.rs  lifestyle.rs  media.rs  mod.rs  network.rs  p2p_updates.rs  partition.rs  privacy.rs  rauc.rs  sandbox.rs  search.rs  session.rs  storage.rs  storage.rs.orig  sync.rs
magnolia-distro/: BUILD_v1.md  Config.in  external.desc  external.mk  release_manifest.json
magnolia-distro/board/magnolia/x86_64/: genimage.cfg  grub.cfg  linux.config  post-build.sh  post-image.sh  stub-libGL.c
magnolia-distro/configs/: magnolia_x86_64_defconfig
magnolia-distro/package/: Config.in
magnolia-distro/package/magnolia-core/: Config.in  magnolia-core.mk
magnolia-distro/package/magnolia-interface/: Config.in  magnolia-interface.mk
magnolia-distro/package/magnolia-supervisor/: Config.in  magnolia-supervisor.mk
magnolia-interface/: package-lock.json  package.json
magnolia-interface/src/: App.tsx  index.css
magnolia-interface/src/assets/locales/: en-US.json  es-LA.json  pt-BR.json
magnolia-interface/src/components/: AppWindow.module.css  AppWindow.tsx
magnolia-interface/src/components/Boot/: BootScreen.tsx
magnolia-interface/src/components/Lockscreen/: Lockscreen.tsx  (+2 more)
magnolia-interface/src/context/: LanguageContext.tsx  PreferencesContext.tsx
magnolia-interface/src/contexts/: ThemeContext.tsx  WindowContext.tsx
magnolia-interface/src/utils/: secureStorage.ts  theme.ts
magnolia-supervisor/: Cargo.toml
magnolia-supervisor/src/: main.rs
scripts/: build_full_os.sh  gcp_deploy_test.sh  test-boot.sh  test_wsl_qemu.sh  validate-image.sh  wsl-bootstrap.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  downloader.rs  huggingface.rs  indexer.rs  inference.rs  lib.rs  llm_manager.rs  rag.rs  secrets.rs  telemetry.rs  temp.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: AppWindow.module.css  AppWindow.tsx
website/: index.html  styles.css
(+120 files in other folders)
