[package]
name = "magnolia-core"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "magnolia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
tauri = { version = "2.10.3", default-features = false, features = ["wry", "compression", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tokio-cron-scheduler = "0.13"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
url = "2.5"
sysinfo = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = "3.6.1"
futures-util = "0.3"
bytes = "1.11.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
sha2 = "0.10.9"
uuid = { version = "1.20.0", features = ["v4"] }
dirs = "6.0.0"
opener = "0.7.1"
nix = { version = "0.29.0", features = ["mount", "signal", "process", "mman"] }
age = { version = "0.11", features = ["armor"] }
chrono = { version = "0.4.39", features = ["serde"] }
notify = "6.1.1"
bip39 = { version = "2.1.0", features = ["rand"] }
sqlite-vec = "0.1.9"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
rayon = "1.10.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
mslnk = "0.1.8"

# Optimization profiles for smaller binaries
[profile.release]
panic = "abort" # Abort on panic for smaller binary size
codegen-units = 1 # Better optimization
lto = true # Link Time Optimization
opt-level = "z" # Optimize for size (use "s" or "3" for performance)
strip = true # Strip symbols
[dev-dependencies]
tempfile = "3.10.1"
