[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
teloxide = { version = "0.12", features = ["macros", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tokio-cron-scheduler = "0.13"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
sysinfo = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = "3.6.1"
futures-util = "0.3"
bytes = "1.11.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
sha2 = "0.10.9"
uuid = { version = "1.20.0", features = ["v4"] }
sqlite-vec = "0.1.9"
